--- a/article.twig
+++ b/article.twig
@@ -919,7 +919,18 @@
         let guestUser = "{{guestUser}}" == 1 ? true : false;
         let articleId = "{{article.id}}";
 
-        
+        console.log("premium", isPremium)
+        console.log("paywalled", paywalled)
+        console.log("publishergranted", publisherGranted)
+
+        console.log('prem', isPremium ? 'blue' : 'green')
+        console.log('walled', paywalled ? 'blue' : 'green')
+        console.log('gran', publisherGranted ? 'blue' : 'green')
+
+        console.log('screspon', {{showcaseResponse.success}})
+        console.log('screspon2', {{showcaseResponse.entitlement}})
+        console.log('screspon3', {{showcaseResponse.error}})
+
         window.userState = {
             granted: false
         };
