--- a/article.twig
+++ b/article.twig
@@ -357,7 +357,9 @@
             </div>
         {% endif %}
         
-        
+        <div style="display:none">
+        {% set log = _AppHelper.printArray(showcaseResponse) %}
+        </div>
         <div class="c-article c-article-xs c-article__carousel">
           
             <div class="container">
@@ -919,13 +921,7 @@
         let guestUser = "{{guestUser}}" == 1 ? true : false;
         let articleId = "{{article.id}}";
 
-        console.log("premium", isPremium)
-        console.log("paywalled", paywalled)
-        console.log("publishergranted", publisherGranted)
 
-        console.log('prem', isPremium ? 'blue' : 'green')
-        console.log('walled', paywalled ? 'blue' : 'green')
-        console.log('gran', publisherGranted ? 'blue' : 'green')
 
         console.log('screspon', {{showcaseResponse.success}})
         console.log('screspon2', {{showcaseResponse.entitlement}})
