--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -63,6 +63,9 @@
         &.draft {
             opacity: 0.3;
         }
+        &__featureImageOriginal {
+            display: none;
+        }
         &__container {
             height: 100%;
             @include flexbox;
