--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -5,7 +5,6 @@
     {% set imageSize = "Width: " ~ params.imgWidth ~ " Height: " ~ params.imgHeight %}
 {% endif %}
 
-
 {% set label = true %}
 {% set additionalLabel = false %}
 {% if config.cardOptions is defined %}
@@ -77,7 +76,7 @@
         {% endif %}
         <p class="u-loadmore-button click_here_btn mt-2">Click here</p>
     </div>
-    {% if config.classifieds['show-preview-image'] == true and params.hasMedia == 'True' %}
+    {% if config.classifieds['show-preview-image'] == true and params.articleMediaDisplay == true %}
         <figure class="mt-2 {{params.cardType}}c-cards-view__featureImageOriginal" title="{{imageSize}}">
             <picture>
                 <img class="img-fluid" src="{{params.articleImgOriginal}}" data-original="{{param.articleImgOriginal}}">
