--- a/render.twig
+++ b/render.twig
@@ -45,6 +45,7 @@
         title           : config.title is defined ? config.title : '',
         featurelisting  : config.featurelisting is defined ? config.featurelisting : '',
         linkShow        : config.linkShow is defined and config.linkShow == false ? false : true,
+        labelColor      : config.labelColor is defined and config.labelColor != '' ? config.labelColor : '',
         dev             : dev,
         site            : site,
         networkData     : networkData,
