--- a/partials/panels/section-12.twig
+++ b/partials/panels/section-12.twig
@@ -24,8 +24,8 @@
     <div class="col-12">
         <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
-            <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
-        </div>
+            <div class="u-heading__large u-heading__large-xs u-pr--6" {% if labelColor != '' %} style="color:{{labelColor}}" {% endif %}>{{title}}</div>
+        </div> 
     </div>
 </div>
 
