--- a/partials/panels/section-staff-panel.twig
+++ b/partials/panels/section-staff-panel.twig
@@ -9,7 +9,7 @@
 <div class="acme-row c-section-head">
     <div class="acme-col-12">
         <a href="{{link}}">
-            <div class="c-section-head__title">{{title}}</div>
+            <div class="c-section-head__title" {% if labelColor != '' %} style="color:{{labelColor}}" {% endif %}>{{title}}</div>
         </a> 
         <div class="c-section-head__rule"></div>
     </div>
