--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -55,6 +55,7 @@
 
 <div class='c-header c-header-xs {{ config['headerSticky'] is defined and config['headerSticky'] != false ? 'js_header' : '' }}'>
     {# Begin header top bar #}
+    <div id="weather" class="c-header__weather-info c-header__weather-info-xs j-weather-panel"></div>
     <div class="c-header-top-bar">
         <div class="container">
             <div class="row">
