--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -101,6 +101,7 @@
 @import "component.lightbox-modal";
 @import "component.subscription";
 @import "component.directory";
+@import "component.weather";
 
 //Cards
 @import "card";
