weather css updates

--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="c-header-main__container">
-                        <div>
+                        <div class="c-header-main__co_weather {% if config.weather['location'] is not empty %} withWeather {% endif %}">
                             <div class="c-header-main__menu">
                                 <div class="c-hamburger__wrap js-menu">
                                     <div class="c-hamburger__wrap-icons o-hamburger"></div>
