--- a/partials/panels/section-09.twig
+++ b/partials/panels/section-09.twig
@@ -6,7 +6,7 @@
     <div class="col-12">
         <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
-            <div class="u-heading__large u-heading__large-xs u-pr--6" {% if labelColor != '' %} style="color:{{labelColor}}" {% endif %}>{{title}}</div>
+            <div class="u-heading__large u-heading__large-xs u-pr--6" {% if labelColor != '' %} style="color:{{labelColor}}; border-bottom-color: {{labelColor}}" {% endif %}>{{title}}</div>
             {% if linkShow %}
                 <a href="{{link}}" class="c-page-head__link">View all</a>
             {% endif %}
