--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -132,3 +132,10 @@
 @import "trumps.utilities";
 
 @import "utility/utility";
+
+.js-resetWeather {
+    margin: 10px 0;
+    padding: 4px 12px;
+    border: 2px solid var(--sec-color);
+    text-align: center;
+}
