--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -138,4 +138,6 @@
     padding: 4px 12px;
     border: 2px solid var(--sec-color);
     text-align: center;
+    font-size: 14px;
+    color: var(--sec-color); 
 }
