--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -295,4 +295,14 @@
                 {{this.render('partials/article/paywall_article_notice.twig', {networkData:networkData, paywallType:paywallType}) | raw}}
             {% endif %}
         </div>
+
+        {% set theKeywords = '' %}
+        {% if article.keywords is defined and article.keywords != '' %}
+            {% set theKeywords = article.keywords %}
+        {% elseif blogInfo.keywords is defined and blogInfo.keywords != '' %}
+            {% set theKeywords = blogInfo.keywords %}
+        {% endif %}
+
+
+        <div id="ad-keywords" class="j-keyword-cont" data-keywords="{{theKeywords}}" data-pageName="" data-pageType="article" data-pageTag="" data-adsection=""></div>
     </main>
