--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -299,8 +299,8 @@
         {% set theKeywords = '' %}
         {% if article.keywords is defined and article.keywords != '' %}
             {% set theKeywords = article.keywords %}
-        {% elseif blogInfo.keywords is defined and blogInfo.keywords != '' %}
-            {% set theKeywords = blogInfo.keywords %}
+        {% elseif articleBlogInfo.keywords is defined and articleBlogInfo.keywords != '' %}
+            {% set theKeywords = articleBlogInfo.keywords %}
         {% endif %}
 
 
